# satellite-simulator

./: .gitignore  Cargo.toml  FENGYUN.json  LICENSE  README.md  ROADMAP.md  config.toml  starlink.json
brp_packages/: Cargo.toml
brp_packages/src/: lib.rs
orbiter/: Cargo.toml
orbiter-py/: Cargo.toml  README.md  orbiter-py.pyi  pyproject.toml  setup.py
orbiter-py/orbiter/: __init__.py  orbiter.py
orbiter-py/tests/: test.py
orbiter/tests/: basic.rs
orbiter_py/: .gitignore  Cargo.toml  README.md  orbiter_py.pyi  pyproject.toml
orbiter_py/.github/workflows/: CI.yml
orbiter_py/src/: lib.rs
orbiter_py/tests/: test.py  test2.py
simulator/: Cargo.toml  Iridium.json  IridiumNext.json  config.toml
simulator/src/: camera.rs  config.rs  main.rs  utils.rs
simulator/src/core/: manager.rs  mod.rs  orbit.rs  satellite.rs
simulator/src/io/: mod.rs
simulator/src/satellite/: communication.rs  manager.rs  mod.rs  orbit.rs  satellite.rs
simulator/src/ui/: display_toggle.rs  fps.rs  mod.rs
simulator/src/ui/widgets/: button.rs  toggle.rs
src/: camera.rs  config.rs  control.rs  io.rs  main.rs  satellite.rs  statistic.rs  ui.rs  utils.rs
src/io/: mod.rs  netcode.rs
src/satellite/: communication.rs  mod.rs  motion.rs  orbit.rs
src/ui/: conn_satur_rat.rs  display_toggle.rs  mod.rs  refresh_conn.rs
src/ui/widgets/: button.rs  mod.rs  toggle.rs
