[package]
name = "satellite_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
toml = "0.8.19"
anyhow = "1.0.92"
rand = "0.8.5"
async-channel = "2.3.1"
async-net = "2.0.0"

[lints.clippy]
type_complexity = "allow"
