[package]
name = "orbiter_py"
version = "0.1.0"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "orbiter_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.*"
brp_packages = { path = "../brp_packages"}