[package]
name = "satellite_simulator"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
bevy = {version="0.16.*", features=["bevy_remote"]}
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
chrono = "0.4.*"
toml = "0.8.19"
rand = "0.9.*"


brp_packages = { path = "../brp_packages"}

[lints.clippy]
type_complexity = "allow"